--- a/website.html
+++ b/website.html
@@ -46,7 +46,7 @@
   <li>RAM: <a href="https://www.newegg.com/g-skill-16gb-288-pin-ddr4-sdram/p/N82E16820231892?Description=g%20skill%20ripjaws&cm_re=g_skill%20ripjaws-_-20-231-892-_-Product">G.Skill Ripjaws 16GB</a></li>
   <li>MOBO: <a href="https://www.newegg.com/p/N82E16813157793?Description=asrock%20z370m%20pro4&cm_re=asrock_z370m%20pro4-_-9SIA4REFGW7213-_-Product">Asrock z370m pro4</a></li>
 </ul>
-<h4>My Favorite Pokemon:</h4>
+<h4>One of My Favorite Pokemon:</h4>
 <a href="https://www.serebii.net/pokedex-rs/170.shtml">
 <img src="https://cdn2.bulbagarden.net/upload/thumb/d/d9/170Chinchou.png/1200px-170Chinchou.png" alt="Chinchou"width="200"height="200">
 </a>
